# assiduous-board-report

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  budgets.py  (+11 more)
backend/app/core/: config.py  deps.py  request_timing.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  accuracy_report.py  audit_log.py  budget.py  comment.py  company.py  document.py  enums.py  financial_statement.py  industry_benchmark.py  insight.py  invitation.py  metric.py  user.py  validation_result.py
backend/app/repositories/: accuracy_report.py  audit_log.py  budget.py  comment.py  company.py  document.py  financial_statement.py  industry_benchmark.py  insight.py  invitation.py  metric.py  organization.py  user.py
backend/app/schemas/: accuracy_report.py  audit_log.py  auth.py  base.py  budget.py  chart.py  comment.py  company.py  document.py  export.py  financial_statement.py  industry_benchmark.py  insight.py  invitation.py  member.py  metric.py  token.py  two_factor.py  user.py
backend/app/services/: accuracy_report.py  avatar.py  organization_deletion.py  schema_check.py  storage.py
backend/app/services/charts/: registry.py
backend/app/services/document/: storage_supabase.py
backend/app/services/email/: mailer.py
backend/app/services/export/: pdf.py
backend/app/services/extraction/: auto_fetch.py  currency.py  llm_extractor.py  pdf_parser.py  pipeline.py  taxonomy.py
backend/app/services/insight/: generator.py  rendering.py
backend/app/services/metrics/: cash.py  common.py  fiscal_periods.py  growth.py  orchestrator.py  profitability.py  registry.py  returns.py  solvency.py
backend/app/services/validation/: rules.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 07e64bfb3773_add_comment_table.py  0a069af885d9_add_company_reporting_frequency_fields.py  1c0d9fa20248_add_accuracy_report_table.py  1cf76589960c_add_missing_taxonomy_codes_to_metric.py  1d93edf5b782_add_insight_manual_edit_fields.py  237e11f21cb4_add_password_reset_token_to_user.py  2b24e07bc8fc_add_company_profile_fields.py  40366c37549f_add_avatar_fields_to_user.py  4639bd4425ac_add_audience_and_period_to_insight.py  57f9d17e6244_add_company_logo_fields.py  5860975589b9_add_budget_table.py  6a0d750a3f42_initial_schema.py  6f5469cb3d93_add_industry_benchmark_table.py  771bc280131d_add_structured_content_to_insight.py  881bb165afd0_restructure_financial_statement_for_.py  a570c57a5654_add_statement_status_and_validation_.py  ab77f61d9f70_add_invitation_type_to_invitation.py  b14a2d263449_add_invitation_table.py  c0f50decdb92_add_period_type_to_financial_statement.py  c75ace7ccfae_add_not_meaningful_flag_to_metric.py  c90997760daf_make_metric_value_nullable_and_add_.py  d1bfd9cf946f_rename_document_status_pending_extracted.py  df2e307ce0bd_add_2fa_fields_to_user.py  ea94d7d87e76_add_auto_fetch_fields_to_company_and_.py  ee532ad58083_add_external_source_id_to_document.py
backend/tests/: conftest.py  test_accept_invitation_deletion.py  test_accuracy_report.py  test_accuracy_report_routes.py  test_auth_routes.py  test_auto_fetch_startup.py  test_avatar.py  test_chart_registry.py  test_charts_route.py  test_config.py  test_export_pdf.py  test_extraction_currency.py  test_extraction_llm_extractor.py  test_extraction_pdf_parser.py  test_extraction_pipeline.py  test_extraction_regression.py  test_fiscal_periods.py  test_health.py  test_insight_generator.py  test_metrics_cash.py  test_metrics_common.py  test_metrics_growth.py  test_metrics_orchestrator.py  test_metrics_orchestrator_db.py  test_metrics_profitability.py  test_metrics_registry.py  test_metrics_returns.py  test_metrics_solvency.py  test_security.py  test_storage.py  test_storage_supabase.py  test_validation_service.py
backend/tests/fixtures/: senus_hy2026_ground_truth.json
(+217 files in other folders)
