[project]
name = "assiduous-board-report-backend"
version = "0.1.0"
description = "Assiduous Board Report Platform - backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "python-multipart>=0.0.12",
    "anthropic>=0.69",
    "pypdf>=5.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "weasyprint>=62",
    "jinja2>=3.1",
    "fastapi-mail>=1.4",
    "playwright>=1.48",
    "supabase>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "regression: calls the real Anthropic API against a stored fixture PDF - excluded from a plain `pytest` run by addopts below (slow, costs money); run explicitly with `pytest -m regression`.",
]
# Excludes regression-marked tests from the default run - without this, a
# dev/CI environment with ANTHROPIC_API_KEY set would silently hit the real
# API (and its cost) on every single `pytest` invocation, since the marker
# alone is just a label and doesn't skip anything by itself.
addopts = "-m 'not regression'"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["migrations/versions"]

[tool.ruff.lint]
# Start narrow (unused imports/vars, bugbear, import-sort) rather than turning on
# every ruleset at once - a from-scratch pyflakes/pycodestyle pass on an
# existing codebase this size surfaces hundreds of pre-existing style nits
# that aren't worth a blanket reformat right now.
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501", # line length is a soft target here, not a hard gate
    # `class X(str, enum.Enum)` -> `enum.StrEnum` is a real modernization, but these
    # enums back SQLAlchemy Enum columns and Pydantic schemas throughout the app -
    # flipping the base class is exactly the kind of change that wants its own
    # reviewed PR with a full regression pass, not a drive-by lint fix.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI pattern is `param: X = Depends(...)` at every route/dependency
# signature - B008 exists to catch genuine mutable-default-argument bugs, not
# this framework-mandated idiom, so treat these specific calls as immutable.
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Header", "fastapi.Cookie", "fastapi.Security",
    # Our own parametrized-dependency factory (`Depends(require_role(...))`) - same
    # once-at-import-time evaluation as Depends() itself, just nested one level.
    "app.core.deps.require_role",
]
